# aiclipal

./: pyproject.toml
src/ai-assistant/: __init__.py  __main__.py
