[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "0.0.1"
authors = [{ name = "Grzegorz Grzęda", email = "grzegorz.grzeda@g2labs.pl" }]
description = "Compact AI assistant for your terminal. Powered by OpenAI API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["vt100logging>=1.1.0"]

[project.urls]
Homepage = "https://github.com/g2labs-grzegorz-grzeda/ai-assistant"
Issues = "https://github.com/g2labs-grzegorz-grzeda/ai-assistant/issues"

[project.scripts]
ai-assistant = "ai-assistant:ai_assistant_main"
